--- a/playground/index.html
+++ b/playground/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/src/assets/aztec_symbol.png" type="image/png" />
     <title>Aztec Playground</title>
   </head>
   <body>
