--- a/barretenberg/cpp/scripts/audit/audit_dashboard.html
+++ b/barretenberg/cpp/scripts/audit/audit_dashboard.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Barrentenberg Audit Dashboard</title>
+  <title>Barretenberg Audit Dashboard</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body { font-family: sans-serif; padding: 2rem; }
@@ -33,7 +33,7 @@
   </style>
 </head>
 <body>
-  <h1>Barrentenberg Audit Dashboard</h1>
+  <h1>Barretenberg Audit Dashboard</h1>
   <div id="legend" class="legend-container"></div>
   <div id="charts" class="chart-grid"></div>
 
