--- a/dev/sim-bench/index.html
+++ b/dev/sim-bench/index.html
@@ -82,6 +82,20 @@
       .benchmark-chart {
         max-width: 1000px;
       }
+      details.bench-section {
+        margin: 16px 0;
+        border: 1px solid #eee;
+        border-radius: 6px;
+        background: #fafbfc;
+        padding: 0.5em 1em;
+      }
+      summary.bench-section-title {
+        font-size: 1.25rem;
+        font-weight: 500;
+        cursor: pointer;
+        outline: none;
+        padding: 0.25em 0;
+      }
     </style>
     <title>Benchmarks</title>
   </head>
@@ -100,6 +114,7 @@
     <main id="main"></main>
     <footer>
       <button id="dl-button">Download data as JSON</button>
+      <button id="toggle-details">Toggle All Sections</button>
       <div class="spacer"></div>
       <div class="small">Powered by <a rel="noopener" href="https://github.com/marketplace/actions/continuous-benchmark">github-action-benchmark</a></div>
     </footer>
@@ -109,7 +124,6 @@
     <script id="main-script">
       'use strict';
       (function() {
-        // Colors from https://github.com/github/linguist/blob/master/lib/linguist/languages.yml
         const toolColors = {
           cargo: '#dea584',
           go: '#00add8',
@@ -125,6 +139,35 @@
           customSmallerIsBetter: '#ff3838',
           _: '#333333'
         };
+
+        const sectionPatterns = [
+          // Avm bulk test
+          { pattern: /^AvmTest.*bulk_testing\//, title: 'AVM bulk test' },
+          // Token
+          { pattern: /^Token.*constructor\//, title: 'Token constructor' },
+          { pattern: /^Token.*mint_to_public\//, title: 'Token mint_to_public' },
+          { pattern: /^Token.*balance_of_public\//, title: 'Token balance_of_public' },
+          { pattern: /^Token.*transfer_in_public\//, title: 'Token transfer_in_public' },
+          { pattern: /^Token.*burn_public\//, title: 'Token burn_public' },
+          // AMM
+          { pattern: /^AMM.*constructor\//, title: 'AMM constructor' },
+          { pattern: /^AMM.*add_liquidity\//, title: 'AMM add_liquidity' },
+          { pattern: /^AMM.*swap_exact_tokens_for_tokens\//, title: 'AMM swap_exact_tokens_for_tokens' },
+          { pattern: /^AMM.*remove_liquidity\//, title: 'AMM remove_liquidity' },
+          // Avm Gadgets
+          { pattern: /^AvmGadgetsTest.*sha256_hash_10\//, title: 'AvmGadgetsTest - sha256 of 10 bytes' },
+          { pattern: /^AvmGadgetsTest.*sha256_hash_100\//, title: 'AvmGadgetsTest - sha256 of 100 bytes' },
+          { pattern: /^AvmGadgetsTest.*sha256_hash_256\//, title: 'AvmGadgetsTest - sha256 of 256 bytes' },
+          { pattern: /^AvmGadgetsTest.*sha256_hash_512\//, title: 'AvmGadgetsTest - sha256 of 512 bytes' },
+          { pattern: /^AvmGadgetsTest.*sha256_hash_2048\//, title: 'AvmGadgetsTest - sha256 of 2048 bytes' },
+        ];
+
+        function getSectionTitle(benchName) {
+          for (const {pattern, title} of sectionPatterns) {
+            if (pattern.test(benchName)) return title;
+          }
+          return null;
+        }
 
         function init() {
           function collectBenchesPerTestCase(entries) {
@@ -146,13 +189,11 @@
 
           const data = window.BENCHMARK_DATA;
 
-          // Render header
           document.getElementById('last-update').textContent = new Date(data.lastUpdate).toString();
           const repoLink = document.getElementById('repository-link');
           repoLink.href = data.repoUrl;
           repoLink.textContent = data.repoUrl;
 
-          // Render footer
           document.getElementById('dl-button').onclick = () => {
             const dataUrl = 'data:,' + JSON.stringify(data, null, 2);
             const a = document.createElement('a');
@@ -161,120 +202,169 @@
             a.click();
           };
 
-          // Prepare data points for charts
           return Object.keys(data.entries).map(name => ({
             name,
             dataSet: collectBenchesPerTestCase(data.entries[name]),
           }));
         }
 
-        function renderAllChars(dataSets) {
+        function groupBenchesBySection(benchSet) {
+          const sectionMap = new Map();
+          for (const [benchName, benches] of benchSet.entries()) {
+            const sectionTitle = getSectionTitle(benchName) || 'Other';
+            if (!sectionMap.has(sectionTitle)) {
+              sectionMap.set(sectionTitle, new Map());
+            }
+            sectionMap.get(sectionTitle).set(benchName, benches);
+          }
+          return sectionMap;
+        }
 
-          function renderGraph(parent, name, dataset) {
-            const canvas = document.createElement('canvas');
-            canvas.className = 'benchmark-chart';
-            parent.appendChild(canvas);
+        function groupSubBenchesBySubSection(benchSet) {
+          const sectionMap = new Map();
+          for (const [benchName, benches] of benchSet.entries()) {
+            const sectionTitle = getSectionTitle(benchName) || 'Other';
+            if (!sectionMap.has(sectionTitle)) {
+              sectionMap.set(sectionTitle, new Map());
+            }
+            sectionMap.get(sectionTitle).set(benchName, benches);
+          }
+          return sectionMap;
+        }
 
-            const color = toolColors[dataset.length > 0 ? dataset[0].tool : '_'];
-            const data = {
-              labels: dataset.map(d => d.commit.id.slice(0, 7)),
-              datasets: [
+        function renderGraph(parent, name, dataset) {
+          const canvas = document.createElement('canvas');
+          canvas.className = 'benchmark-chart';
+          parent.appendChild(canvas);
+
+          const color = toolColors[dataset.length > 0 ? dataset[0].tool : '_'];
+          const data = {
+            labels: dataset.map(d => d.commit.id.slice(0, 7)),
+            datasets: [
+              {
+                label: name,
+                data: dataset.map(d => d.bench.value),
+                borderColor: color,
+                backgroundColor: color + '60',
+              }
+            ],
+          };
+          const options = {
+            scales: {
+              xAxes: [
                 {
-                  label: name,
-                  data: dataset.map(d => d.bench.value),
-                  borderColor: color,
-                  backgroundColor: color + '60', // Add alpha for #rrggbbaa
+                  scaleLabel: {
+                    display: true,
+                    labelString: 'commit',
+                  },
                 }
               ],
-            };
-            const options = {
-              scales: {
-                xAxes: [
-                  {
-                    scaleLabel: {
-                      display: true,
-                      labelString: 'commit',
-                    },
-                  }
-                ],
-                yAxes: [
-                  {
-                    scaleLabel: {
-                      display: true,
-                      labelString: dataset.length > 0 ? dataset[0].bench.unit : '',
-                    },
-                    ticks: {
-                      beginAtZero: true,
-                    }
-                  }
-                ],
-              },
-              tooltips: {
-                callbacks: {
-                  afterTitle: items => {
-                    const {index} = items[0];
-                    const data = dataset[index];
-                    return '\n' + data.commit.message + '\n\n' + data.commit.timestamp + ' committed by @' + data.commit.committer.username + '\n';
+              yAxes: [
+                {
+                  scaleLabel: {
+                    display: true,
+                    labelString: dataset.length > 0 ? dataset[0].bench.unit : '',
                   },
-                  label: item => {
-                    let label = item.value;
-                    const { range, unit } = dataset[item.index].bench;
-                    label += ' ' + unit;
-                    if (range) {
-                      label += ' (' + range + ')';
-                    }
-                    return label;
-                  },
-                  afterLabel: item => {
-                    const { extra } = dataset[item.index].bench;
-                    return extra ? '\n' + extra : '';
+                  ticks: {
+                    beginAtZero: true,
                   }
                 }
-              },
-              onClick: (_mouseEvent, activeElems) => {
-                if (activeElems.length === 0) {
-                  return;
+              ],
+            },
+            tooltips: {
+              callbacks: {
+                afterTitle: items => {
+                  const {index} = items[0];
+                  const data = dataset[index];
+                  return '\n' + data.commit.message + '\n\n' + data.commit.timestamp + ' committed by @' + data.commit.committer.username + '\n';
+                },
+                label: item => {
+                  let label = item.value;
+                  const { range, unit } = dataset[item.index].bench;
+                  label += ' ' + unit;
+                  if (range) {
+                    label += ' (' + range + ')';
+                  }
+                  return label;
+                },
+                afterLabel: item => {
+                  const { extra } = dataset[item.index].bench;
+                  return extra ? '\n' + extra : '';
                 }
-                // XXX: Undocumented. How can we know the index?
-                const index = activeElems[0]._index;
-                const url = dataset[index].commit.url;
-                window.open(url, '_blank');
-              },
-            };
+              }
+            },
+            onClick: (_mouseEvent, activeElems) => {
+              if (activeElems.length === 0) {
+                return;
+              }
+              const index = activeElems[0]._index;
+              const url = dataset[index].commit.url;
+              window.open(url, '_blank');
+            },
+          };
 
-            new Chart(canvas, {
-              type: 'line',
-              data,
-              options,
-            });
-          }
+          new Chart(canvas, {
+            type: 'line',
+            data,
+            options,
+          });
+        }
 
-          function renderBenchSet(name, benchSet, main) {
-            const setElem = document.createElement('div');
-            setElem.className = 'benchmark-set';
-            main.appendChild(setElem);
+        function renderBenchSet(name, benchSet, main, customTitle) {
+          const setElem = document.createElement('div');
+          setElem.className = 'benchmark-set';
+          main.appendChild(setElem);
 
-            const nameElem = document.createElement('h1');
-            nameElem.className = 'benchmark-title';
-            nameElem.textContent = name;
-            setElem.appendChild(nameElem);
+          const nameElem = document.createElement('h1');
+          nameElem.className = 'benchmark-title';
+          nameElem.textContent = customTitle || name;
+          setElem.appendChild(nameElem);
+
+          const sectionMap = groupBenchesBySection(benchSet);
+
+          for (const [sectionTitle, benchesMap] of sectionMap.entries()) {
+            const details = document.createElement('details');
+            details.className = 'bench-section';
+            if (sectionTitle !== 'Other') details.open = false;
+
+            const summary = document.createElement('summary');
+            summary.className = 'bench-section-title';
+            summary.textContent = sectionTitle;
+            details.appendChild(summary);
 
             const graphsElem = document.createElement('div');
             graphsElem.className = 'benchmark-graphs';
-            setElem.appendChild(graphsElem);
+            details.appendChild(graphsElem);
 
-            for (const [benchName, benches] of benchSet.entries()) {
-              renderGraph(graphsElem, benchName, benches)
+            for (const [benchName, benches] of benchesMap.entries()) {
+              renderGraph(graphsElem, benchName, benches);
             }
-          }
-
-          const main = document.getElementById('main');
-          for (const {name, dataSet} of dataSets) {
-            renderBenchSet(name, dataSet, main);
+            setElem.appendChild(details);
           }
         }
 
-        renderAllChars(init()); // Start
+        function renderAllChars(dataSets) {
+          const main = document.getElementById('main');
+          let setIndex = 0;
+          for (const {name, dataSet} of dataSets) {
+            if (setIndex === 0) {
+              renderBenchSet(name, dataSet, main, "Aztec Public Simulation Benchmarks");
+            } else {
+              renderBenchSet(name, dataSet, main);
+            }
+            setIndex++;
+          }
+        }
+
+        function toggleAllDetails() {
+          const detailsElements = document.querySelectorAll('details.bench-section');
+          const allOpen = Array.from(detailsElements).every(details => details.open);
+          detailsElements.forEach(details => details.open = !allOpen);
+        }
+
+        document.getElementById('toggle-details').addEventListener('click', toggleAllDetails);
+
+        renderAllChars(init());
       })();
     </script>
   </body>
