add tally (commented out)

--- a/playground/index.html
+++ b/playground/index.html
@@ -6,6 +6,8 @@
     <link rel="icon" href="/src/assets/aztec_symbol.png" type="image/png" />
     <title>Aztec Playground</title>
 
+    <!-- <script src="/tally.js"></script> -->
+
     <!-- Matomo -->
     <script>
       var _paq = window._paq = window._paq || [];
